<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/stopwatchLayout">
    <!-- TODO Code refers to both stopwatchLayout and mainLayout; see Anstop.setupGesture -->
    <LinearLayout
		android:id="@+id/mainLayout"
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:orientation="vertical">

		<RelativeLayout android:id="@+id/RelativeLayout01" android:layout_width="wrap_content" android:layout_height="wrap_content">

			<LinearLayout
				android:id="@+id/LinearLayout02"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

				<!-- spacer -->
				<View
					android:layout_width="0px"
					android:layout_height="match_parent"
					android:layout_weight="1" />

				<TextView
					android:id="@+id/hourView"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="0"/>

				<TextView
					android:id="@+id/hourLabelView"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/hour"/>
				<!-- spacer; 3sp is scaled with user's text preferences -->
				<TextView
					android:layout_width="3sp"
					android:layout_height="wrap_content"
					android:text=""/>

				<TextView
					android:id="@+id/minView"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="00"/>

				<TextView
					android:id="@+id/sepView1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text=":"/>

				<TextView
					android:id="@+id/secondsView"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="00"/>

				<TextView
					android:id="@+id/sepView2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text=":"/>

				<TextView
					android:id="@+id/dsecondsView"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="0"/>

				<!-- spacer -->
				<View
					android:layout_width="0px"
					android:layout_height="match_parent"
					android:layout_weight="1" />
			</LinearLayout>
		</RelativeLayout>

		<!-- 3 buttons together fill activity width; height also increased -->
		<LinearLayout android:id="@+id/LinearLayout01" android:layout_width="fill_parent" android:layout_height="wrap_content">
			<Button android:layout_width="0dp" android:layout_height="60dp" android:layout_weight=".34"
			    android:id="@+id/startButton" android:text="@string/start_stop" />
			<Button android:layout_width="0dp" android:layout_height="60dp" android:layout_weight=".33"
			    android:id="@+id/resetButton" android:text="@string/reset" />
			<Button android:layout_width="0dp" android:layout_height="60dp" android:layout_weight=".33"
			    android:id="@+id/lapButton" android:text="@string/lap" />
		</LinearLayout>

		<ScrollView android:id="@+id/lapScrollView" android:layout_width="fill_parent" android:layout_height="fill_parent">
			<TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/lapView" android:text="@string/laps" />
		</ScrollView>

	</LinearLayout>
</LinearLayout>
