<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/stopwatch_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/LinearLayout03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/hour_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/hour_label_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hour" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/RelativeLayout01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/LinearLayout02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/min_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00" />

                <TextView
                    android:id="@+id/sep_view1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":" />

                <TextView
                    android:id="@+id/seconds_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00" />

                <TextView
                    android:id="@+id/sep_view2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":" />

                <TextView
                    android:id="@+id/dseconds_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/start_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_stop" />

            <Button
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset" />

            <Button
                android:id="@+id/lap_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lap" />
        </LinearLayout>

        <ScrollView
            android:id="@+id/lap_scroll_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/lap_view"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/laps" />
        </ScrollView>
    </LinearLayout>

</LinearLayout>