<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/countDownLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <!-- TODO Code refers to both countDownLayout and mainLayout; see Anstop.setupGesture -->
        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/LinearLayout02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <!-- spacer -->
                <View
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/hourView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"/>

                <TextView
                    android:id="@+id/hourLabelView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hour"/>
                <!-- spacer; 3sp is scaled with user's text preferences -->
                <TextView
                    android:layout_width="3sp"
                    android:layout_height="wrap_content"
                    android:text=""/>

                <TextView
                    android:id="@+id/minView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"/>

                <TextView
                    android:id="@+id/sepView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"/>

                <TextView
                    android:id="@+id/secondsView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="00"/>

                <TextView
                    android:id="@+id/sepView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=":"/>

                <TextView
                    android:id="@+id/dsecondsView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"/>

                <!-- spacer -->
                <View
                    android:layout_width="0px"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/startButton"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight=".5"
                    android:text="@string/start_stop"/>

                <Button
                    android:id="@+id/refreshButton"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_weight=".5"
                    android:text="@string/refresh"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/LinearLayout04"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/TextView04"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/hours"/>

                <Spinner
                    android:id="@+id/hourSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout05"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/TextView05"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/minutes"/>

                <Spinner
                    android:id="@+id/minSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearLayout06"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/TextView06"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:text="@string/seconds"></TextView>

                <Spinner
                    android:id="@+id/secSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"></Spinner>


            </LinearLayout>

            <TextView
                android:id="@+id/countdown_startTimeView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
